# ai4s-papers-service

./: .env.example  .gitignore  README.md  developer_introduction.md  manage.py  pyproject.toml  start.sh
ai4s_papers_service/: asgi.py  settings.py  urls.py  wsgi.py
bohrium_webapp/: dockerfile
cloudflare-r2event/: command.sh  curl_triger_prefect_workflow.sh  deploy.sh  wrangler.toml
cloudflare-r2event/src/: index.js
papers_db/: admin.py  api.py  apps.py  fastgpt_api_intro.txt  file_api.py  models.py  schemas.py  test_api.py  test_api.sh  test_base_api.py  test_file_api.py
papers_db/migrations/: 0001_initial.py  0002_alter_paper_abstract_alter_paper_arxiv_id_and_more.py  0003_alter_paper_doi.py  0004_paper_markdown_filename.py  0005_paper_markdown_filemd5_paper_pdf_filemd5.py  0006_alter_paper_markdown_content.py  0007_rename_pdf_content_paper_origin_content_and_more.py  0008_alter_paper_year.py  0009_paper_fastgpt_collectionid.py
pdf_parser_service/: README.md  curl_pdf_parser_to_md.sh  pdf_parser.py  requirements.txt
prefect_workflow/: README.md  curl_fastgpt.sh  curl_prefect_trigger_flow.sh  hello_world.py  main.py  prefect_getting_started.py  pyproject.toml  start.sh  workflow_handle_pdf.py  zbpack.json
prefect_workflow/markdown_agent/: __init__.py  curl_modal_deploy.sh  md_paper_metadata_agent.py
prefect_workflow/tests/: test_agent_markdown_metadata.py  test_fastgpt_upload.py  test_get_primary_domain_from_pdf_url.py  test_modal_pdf_to_md.py  test_save_function.py  test_workflow_handle_pdf.py
